--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
 	<head>
 		<title>Latihan Navbar</title>
-		
+		<link rel="stylesheet" href="style.css"> 
 		
 	</head>
 	<body>
 		<nav class="navbar">
 		<div class="logo">
-		<a href="https://irfhanardhiansyah.github.io/CodingCamp-17Nov25-IrfhanArdhiansyah/">Irfhan</a>
+		<a href="https://irfhanardhiansyah.github.io/CodingCamp-17Nov25-IrfhanArdhiansyah/">IA</a>
 		</div>
 			<ul class="nav-links">
 				<li><a href="#">Beranda</a></li>
 				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/latihanGit/latihan2.html">Profil</a></li>
 				<li><a href="#">Kontak</a></li>
+				<li><a href="#">Buku Tamu</a></li>
 			</ul>
 		</nav>
 	
@@ -21,6 +22,7 @@
 			<p>
 			Selamat menikmati web saya....
 			</p>
+			<a class="link-hero" href="#">Lihat Portofolio</a>
 		</section>
 	
 	
