--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<li><a href="#">Beranda</a></li>
 				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/latihanGit/latihan2.html">Profil</a></li>
 				<li><a href="#">Kontak</a></li>
-				<li><a href="#">Buku Tamu</a></li>
+				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/Latihan%20Navbar/guestPage.html">Buku Tamu</a></li>
 			</ul>
 		</nav>
 	
