--- a/guestPage.html
+++ b/guestPage.html
@@ -67,7 +67,7 @@
 		<a href="https://irfhanardhiansyah.github.io/CodingCamp-17Nov25-IrfhanArdhiansyah/">IA</a>
 		</div>
 			<ul class="nav-links">
-				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/Latihan%20Navbar/index.html">Beranda</a></li>
+				<li><a href="">Beranda</a></li>
 				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/latihanGit/latihan2.html">Profil</a></li>
 				<li><a href="#">Kontak</a></li>
 				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/Latihan%20Navbar/guestPage.html">Buku Tamu</a></li>
@@ -77,7 +77,7 @@
 	<div class="all">
 	<div class="card">
 		<img src="assets/image/img2.jpg" class="card-img">
-		<h3 class="card-title">Joni</h3>
+		<h3 class="card-title">Irfhan Ardhiansyah</h3>
 		<p class="card-subtitle">Rusher | Jungler | Junior Web Developer</p>
 		<button class="card-btn">
 			Lihat Profil
@@ -87,8 +87,8 @@
 	
 	<div class="card">
 		<img src="assets/image/img3.png" class="card-img">
-		<h3 class="card-title">Jokowi</h3>
-		<p class="card-subtitle">supprot| GOld laner | Junior Web Developer</p>
+		<h3 class="card-title">Irfhan Ardhiansyah</h3>
+		<p class="card-subtitle">Rusher | Jungler | Junior Web Developer</p>
 		<button class="card-btn">
 			Lihat Profil
 		</button>
@@ -96,8 +96,8 @@
 	
 	<div class="card">
 		<img src="assets/image/img4.jpeg" class="card-img">
-		<h3 class="card-title">Resbob</h3>
-		<p class="card-subtitle">Flankking | Roam | Junior Web Developer</p>
+		<h3 class="card-title">Irfhan Ardhiansyah</h3>
+		<p class="card-subtitle">Rusher | Jungler | Junior Web Developer</p>
 		<button class="card-btn">
 			Lihat Profil
 		</button>
