--- a/guestPage.html
+++ b/guestPage.html
@@ -67,7 +67,7 @@
 		<a href="https://irfhanardhiansyah.github.io/CodingCamp-17Nov25-IrfhanArdhiansyah/">IA</a>
 		</div>
 			<ul class="nav-links">
-				<li><a href="">Beranda</a></li>
+				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/Latihan%20Navbar/index.html">Beranda</a></li>
 				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/latihanGit/latihan2.html">Profil</a></li>
 				<li><a href="#">Kontak</a></li>
 				<li><a href="file:///C:/Users/irfha/OneDrive/Dokumen/HTML/Latihan%20Navbar/guestPage.html">Buku Tamu</a></li>
